profile pic alignment fix

--- a/hrmain.css
+++ b/hrmain.css
@@ -104,6 +104,7 @@ h6{
     text-align: center;
     display: block;
     padding: 10px;
+    padding-right: 10px !important;
   }
 }
 
